--- a/.github/workflows/deploy-lucasfogliarini.bora.earth.yml
+++ b/.github/workflows/deploy-lucasfogliarini.bora.earth.yml
@@ -5,15 +5,14 @@ on:
 
 jobs:
   build_and_deploy_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
-    name: Build and Deploy Job
+    name: Build and Deploy to lucasfogliarini.bora.earth
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: true
           lfs: false
-      - name: Build And Deploy
+      - name: Build And Deploy to lucasfogliarini.bora.earth
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
