--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "node": ">=18 <=20"
   },
   "scripts": {
-    "dev": "next dev",
+    "start": "next dev",
+    "start:prod": "next build && next start",
     "export": "next export",
     "build": "next build",
-    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
